--- a/src/app/components/Hello/hello.component.css
+++ b/src/app/components/Hello/hello.component.css
@@ -1,29 +1,8 @@
-.detailsLink{
-    font-size: 14px;
-    background-color: bisque
-}
-.list{
-    background-color: lightblue;
-    width: 20%;
-    float: left;
-    height: auto;   
-    margin-left: 5px;
-    margin-bottom: 5px
-}
-.listItem{
-padding-bottom: 5px;
-}
+
 .container{
     width: 100%;
-}
-
-.details {
-    width: 70%;
-    font-size: 14px;
-    display: inline-block;
-    flex-direction: column;
-    border-color: yellow;
+    border-color: blueviolet;
     border-width: 3px;
     border-style: solid;
-    margin-left: 10px
+    background-color: darkgray
 }
