--- a/src/app/components/Hello/hello.component.html
+++ b/src/app/components/Hello/hello.component.html
@@ -1,5 +1,8 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div class="container">
+  <div style="padding: 2px 2px 2px 2px">
+    <button (click)="onBack()">Back</button>
+  </div>
     <div style="text-align:center;">
       <span>{{hello}}</span> 
     </div>
