--- a/src/app/components/Home/home.component.html
+++ b/src/app/components/Home/home.component.html
@@ -3,5 +3,8 @@
   <h1>
    Home
   </h1>
+  <p style="background-color: springgreen">
+    In this application you will see all the possible types of routes in Angular.
+  </p>
 </div>
 
