--- a/src/app/components/Employee/employee.component.css
+++ b/src/app/components/Employee/employee.component.css
@@ -15,6 +15,7 @@ padding-bottom: 5px;
 }
 .container{
     width: 100%;
+    height: 400px;
 }
 
 .details {
@@ -25,8 +26,14 @@ padding-bottom: 5px;
     border-color: yellow;
     border-width: 3px;
     border-style: solid;
-    margin-left: 10px
+    margin-left: 10px;
+    padding: 5px 5px 5px 5px;   
 }
 .header{
-    text-align:center;background-color: coral;margin-bottom: 20px
+    text-align:center;
+    background-color: coral;
+    margin-bottom: 20px
+}
+.emp{
+    padding-left: 8px;
 }
