--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,13 +11,13 @@
   <div class="sidenav">
       <ul>
         <li>
-          <h2><a  routerLink="home" employee >Home</a></h2>
+          <h2><a routerLink="home">Home</a></h2>
         </li>
         <li>
-          <h2><a    routerLink="employee"  >Nested View</a></h2>
+          <h2><a routerLink="employee">Nested View</a></h2>
         </li>
         <li>
-          <h2><a    >Authenticated Route</a></h2>
+          <h2><a routerLink="account">Authenticated Route</a></h2>
         </li>        
       </ul>
   </div>
