--- a/src/app/components/Employee/employee.component.html
+++ b/src/app/components/Employee/employee.component.html
@@ -11,6 +11,7 @@
 
   </div>
     <div class="details">
+      <pre>Select/Change employee from left list</pre>
       <router-outlet></router-outlet>
     </div>
 </div>
