--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,7 +4,7 @@ body {
 
   .container{
       width: 100%;
-  }
+      }
 .sidenav {
     float: left;
     width: 20%;
@@ -37,9 +37,10 @@ body {
     border-width: 3px;
     border-style: solid;
     display: inline-block;
-    height: 100%;
+    height: 260px;
     flex-direction: column;
-    margin-left: 10px
+    margin-left: 10px;
+    position: relative;
     
   }
 .message{
